feat: include staticbookmarks in searchUserBookmarks
